feat: click-and-hold to activate phantom power buttons
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="channel-strip" data-channel="1">
         <div class="label-row">
           <div class="label channel-label" id="label-ch1" contenteditable="true">CH 1</div>
-          <button class="btn-small phantom" id="phantom-ch1" data-channel="1" title="48V channel CH 1">48V</button>
+          <button class="btn-small phantom" id="phantom-ch1" data-channel="1" title="48V channel CH 1 (Click and hold to activate)">48V</button>
         </div>
         <div class="section-sep"></div>
         <div class="channel-input-controls">
@@ -84,7 +84,7 @@
               <input class="fader" id="fader-ch1" data-channel="1" type="range" min="0" max="127" value="100">
             </div>
           </div>
-            <div class="level-readout" id="lvl-ch1">Lvl: +0.0 dB</div>
+          <div class="level-readout" id="lvl-ch1">Lvl: +0.0 dB</div>
           <div class="pan-wrapper">
             <input class="pan" id="pan-ch1" data-channel="1" type="range" min="0" max="127" value="64">
             <div class="pan-readout" id="panval-ch1">Pan: C</div>
@@ -104,7 +104,7 @@
       <div class="channel-strip" data-channel="2">
         <div class="label-row">
           <div class="label channel-label" id="label-ch2" contenteditable="true">CH 2</div>
-          <button class="btn-small phantom" id="phantom-ch2" data-channel="2" title="48V channel CH 2">48V</button>
+          <button class="btn-small phantom" id="phantom-ch2" data-channel="2" title="48V channel CH 2 (Click and hold to activate)">48V</button>
         </div>
         <div class="section-sep"></div>
         <div class="channel-input-controls">
@@ -493,7 +493,7 @@
         <div class="section-sep"></div>
         <div class="balance-wrapper">
           <input id="balance-master" type="range" min="0" max="127" value="64">
-          <div class="balance-readout" id="bal-master">Bal: C</div>
+            <div class="balance-readout" id="bal-master">Bal: C</div>
         </div>
       </div>
 
@@ -515,7 +515,7 @@
         <input type="checkbox" id="logTaper"> Log Fader Taper (Outbound)
       </label>
       <div class="notice">
-        Stereo Link (MON 1/2) hides MON2 controls & sends. State is saved in scene.
+        Stereo Link (MON 1/2) hides MON2 controls & sends. 48V buttons: Click and hold (&gt;2s) to activate, single click to deactivate.
       </div>
     </fieldset>
 
